--- a/account/templates/registration/password_change_form.html
+++ b/account/templates/registration/password_change_form.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% load i18n %}
+{% load static %}
 
 {% block title %}{% blocktrans %}Passwort ändern{% endblocktrans %}{% endblock %}
 
 {% block content %}
-    <h1>{% blocktrans %}Passwort ändern{% endblocktrans %}</h1>
-    <p>{% blocktrans %}Benutzen Sie folgendes Formular zum Ändern des Passworts:{% endblocktrans %}</p>
+    <h1 class="h-img"><img src="{% static 'icons/password.png' %}">{% blocktrans %}Passwort ändern{% endblocktrans %}</h1>
+    <p class="info-p">{% blocktrans %}Benutzen Sie folgendes Formular zum Ändern des Passworts:{% endblocktrans %}</p>
     <form class="login-form" method="post">
         {{ form.as_p }}
         {% csrf_token %}
