--- a/account/templates/registration/password_reset_confirm.html
+++ b/account/templates/registration/password_reset_confirm.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 {% load i18n %}
+{% load static %}
 
 {% block title %}{% blocktrans %}Passwort zurücksetzen{% endblocktrans %}{% endblock %}
 
 {% block content %}
-    <h1>{% blocktrans %}Passwort zurücksetzen{% endblocktrans %}</h1>
+    <h1 class="h-img"><img src="{% static 'icons/password_reset.png' %}">{% blocktrans %}Passwort zurücksetzen{% endblocktrans %}</h1>
     {% if validlink %}
-        <p>{% blocktrans %}Bitte geben Sie das neue Passwort zweimal ein:{% endblocktrans %}</p>
+        <p class="info-p">{% blocktrans %}Bitte geben Sie das neue Passwort zweimal ein:{% endblocktrans %}</p>
         <form class="login-form" method="post">
             {{ form.as_p }}
             {% csrf_token %}
