--- a/account/templates/registration/password_reset_email.html
+++ b/account/templates/registration/password_reset_email.html
@@ -1,9 +1,8 @@
 {% load i18n %}
-{% load static %}
 <html>
     <title>{% trans 'Passwort zurücksetzen' %}</title>
     <body>
-        <h1 style="display: flex; align-items: center; justify-content: center;"><img src="{% static 'icons/forgot.png' %}">{% trans 'Passwort zurücksetzen' %}</h1>
+        <h1 style="text-align: center">{% trans 'Passwort zurücksetzen' %}</h1>
         <h2 style="text-align: center">{% trans 'Hallo' %} {{ user }}!</h2>
         <p>{% blocktrans with v0=email %}Jemand hat auf https://www.myactivities.net um eine Passwort-Zurücksetzung gebeten und diese E-Mail Adresse angegeben.<br>
             Falls Sie Ihr Passwort zurücksetzen wollen, folgen Sie diesem Link: {% endblocktrans %}
