--- a/character/templates/character/quiz.html
+++ b/character/templates/character/quiz.html
@@ -6,7 +6,7 @@
 {% block style %}{% include 'css/quiz.css' %}{% endblock %}
 
 {% block content %}
-<h1>{% trans 'Fragebogen' %}</h1>
+<h1 class="h-img"><img src="{% static 'icons/question.png' %}">{% trans 'Fragebogen' %}</h1>
 <div class="button-like" style="margin-bottom: 15px;" onclick=openLink("{% url 'character:overview' %}")>
     <img src="{% static 'icons/questionnaire.png' %}">
     {% trans 'Zur Charakterübersicht' %}
