--- a/activity/templates/activity/category_detail.html
+++ b/activity/templates/activity/category_detail.html
@@ -17,7 +17,7 @@
     <h1 class="center-container">{{ category.verbose }}</h1>
     <p class="center-container"><i>{{ category.description }}</i></p>
     <h2>
-        <div class="button-like" onclick=openLink("{% url 'usergroups:group_list' category.id %}")><img src="{% static 'icons/groups.png' %}">{% trans "Zu den Gruppen" %}</h2>
+        <div class="button-like" onclick=openLink("{% url 'usergroups:group_list' category.id %}")><img src="{% static 'icons/group.png' %}">{% trans "Zu den Gruppen" %}</h2>
     <p>{% trans "Folgende Aktivitäten gehören zu dieser Kategorie" %}:</p>
         {% include "activity/loop.html" with activities=category.activities%}
     <div class="profile-rest">
