--- a/multiplayer/templates/multiplayer/lobby.html
+++ b/multiplayer/templates/multiplayer/lobby.html
@@ -11,7 +11,7 @@
 {% block content %}
 <h1 class="h-img" style="margin-bottom: 5px"><img src="{% static 'icons/lobby.png' %}"><a href="{{ activity.get_absolute_url }}">{{ activity }}</a>-Lobby</h1>
 <p class="info-p">
-    {% blocktrans with activity=activity %}Hier können Sie {{ activity }} online spielen (<a href="/multiplayer/rules">Spielregeln finden Sie hier</a>). Als Ersteller eines Matches können Sie das Spiel starten, wenn die eingestellte Spieleranzahl anwesend ist. Durch Klick auf den Mülleimer schmeißen Sie Leute raus. Bitte treten Sie dann nicht wieder ohne guten Grund ein! Den Chat erreichen Sie im Spiel über den Chat-Button oben rechts.{% endblocktrans %}
+    {% blocktrans with activity=activity %}Hier können Sie {{ activity }} online spielen (<a href="/multiplayer/rules">Spielregeln finden Sie hier</a>). Als Ersteller eines Matches können Sie das Spiel starten, wenn die eingestellte Spieleranzahl anwesend ist. Durch Klick auf den Mülleimer schmeißen Sie Leute raus. Den Chat erreichen Sie im Spiel über den Chat-Button oben rechts.<br><span style="color: yellow">Noch nicht begonnene Spiele werden nach 1 Stunde, laufende nach 2 Tagen automatisch gelöscht.</span>{% endblocktrans %}
 </p>
 <div class="button-like" onclick=openLink("{% url 'multiplayer:create_match' activity.name %}")><img src="{% static 'icons/match.png' %}">{% blocktrans %}Match erstellen{% endblocktrans %}</div>
 <p></p>
@@ -31,7 +31,8 @@
                 </div>
                 
                 <div class="middle">
-                    {% for k, v in match.member_positions.items %}{% if v == match.admin.username %}<b style="color: red">{{ v }}</b>{% else %}{{ v }}{% endif %}{% if forloop.counter < match.members.count %}, {% endif %}{% endfor %}
+                    {% for k, v in match.member_positions.items %}{% if v == match.admin.username %}<b style="color: red">{{ v }}</b>{% else %}{{ v }}{% endif %}{% if forloop.counter < match.members.count %}, {% endif %}{% endfor %}<br>
+                    <span style="font-size: 10px">({% trans 'noch' %} {{ match.delete_date|timeuntil }})</span>
                 </div>
                 <div class="bottom">
                     <div class="button-like" onclick="openLink('{{ match.get_absolute_url }}')">
