--- a/account/templates/registration/activation_email.html
+++ b/account/templates/registration/activation_email.html
@@ -6,6 +6,6 @@
         <h2>{% trans 'Hallo' %} {{ user }}!</h2>
         <p>{% trans 'Ihr Account auf https://www.myactivities.net wurde erfolgreich erstellt. Klicken Sie auf den folgenden Link, um ihn zu aktivieren.' %}</p>
         <p><a href='{{ activation_url }}'>{{ activation_url }}</a></p>
-        <p>{% trans 'Der Link ist 3 Tage gültig. Sie können durch erneutes Registrieren jederzeit einen neuen anfordern. %}</p>
+        <p>{% trans 'Der Link ist 3 Tage gültig. Sie können durch erneutes Registrieren jederzeit einen neuen anfordern.' %}</p>
     </body>
 </html>
