--- a/account/templates/account/edit_address.html
+++ b/account/templates/account/edit_address.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <h1 class="h-img"><img src="{% static 'icons/home.png' %}">{% blocktrans %}Adresse ändern{% endblocktrans %}</h1>
-    <p class="info-p">{% blocktrans %}Geben Sie hier eine neue Stadt ein.{% endblocktrans %}</p>
+    <p class="info-p">{% blocktrans %}Geben Sie hier eine neue Stadt ein. Sie können Ihre Adresse nur einmal alle 7 Tage ändern.{% endblocktrans %}</p>
     <form class="login-form" method="post">
         {{ location_form.as_p }}
         {% csrf_token %}
