--- a/account/templates/account/about.html
+++ b/account/templates/account/about.html
@@ -12,31 +12,31 @@
 <div class="center-container">
 <p style="font-weight: bold;">{% trans "Ermitteln Sie Ihre Persönlichkeit in wenigen Minuten durch einfache Fragen!" %}</p>
 {% if prefix == 'de' %}
-<img src="{% static 'questions_de.png' %}" class="about-picture">
+<img src="{% static 'about/questions_de.png' %}" class="about-picture">
 <br>
-<img src="{% static 'charakter_de.png' %}" class="about-picture">
+<img src="{% static 'about/charakter_de.png' %}" class="about-picture">
 {% else %}
-<img src="{% static 'questions_en.png' %}" class="about-picture">
+<img src="{% static 'about/questions_en.png' %}" class="about-picture">
 <br>
-<img src="{% static 'charakter_en.png' %}" class="about-picture">
+<img src="{% static 'about/charakter_en.png' %}" class="about-picture">
 {% endif %}
 <p>{% trans "Anschließend werden Ihnen Aktivitäten empfohlen, die zu Ihnen passen könnten. Sie können auch nach Leuten in Ihrer Nähe suchen, die einen ähnlichen Charakter haben wie Sie!" %}</p>
 {% if prefix == 'de' %}
-<img src="{% static 'suggestions_de.png' %}" class="about-picture">
+<img src="{% static 'about/suggestions_de.png' %}" class="about-picture">
 {% else %}
-<img src="{% static 'suggestions_en.png' %}" class="about-picture">
+<img src="{% static 'about/suggestions_en.png' %}" class="about-picture">
 {% endif %}
 <p>{% trans "Sie können per Text und Audiokonferenz chatten und nebenbei sogar einige Kartenspiele spielen." %}</p>
 {% if prefix == 'de' %}
-<img src="{% static 'game_de.png' %}" class="about-picture">
+<img src="{% static 'about/game_de.png' %}" class="about-picture">
 {% else %}
-<img src="{% static 'game_en.png' %}" class="about-picture">
+<img src="{% static 'about/game_en.png' %}" class="about-picture">
 {% endif %}
 <p>{% trans "Aktivitäten in Ihrer Nähe werden nach Mitgliederzahl sortiert. So können Sie sehen, was beliebt ist und was nicht. Und in jeder Aktivität kann jedes Mitglied Orte auf der Karte markieren, wie hier bei Spazieren:" %}</p>
 {% if prefix == 'de' %}
-<img src="{% static 'map_de.png' %}" class="about-picture">
+<img src="{% static 'about/map_de.png' %}" class="about-picture">
 {% else %}
-<img src="{% static 'map_en.png' %}" class="about-picture">
+<img src="{% static 'about/map_en.png' %}" class="about-picture">
 {% endif %}
 <p>{% trans 'Außerdem können Sie Gruppen und Gruppentermine organisieren, Posts erstellen und vieles mehr!' %}</p>
 </div>
