--- a/account/templates/account/edit.html
+++ b/account/templates/account/edit.html
@@ -36,7 +36,7 @@
             </div>
         {% endfor %}
     </ul>
-    <div class="django-message" id="message" style="display: none; position: fixed;">
+    <div class="django-message" id="message" style="display: none;">
         <p>{% trans 'Gespeichert: ' %} <span id="msg-text"></span></p>
         <div class="center-container"><div class="blue-button" onclick="document.getElementById('message').style.display='none';">{% trans "OK!" %}</div></div>
 </div>
