--- a/activity/templates/activity/detail.html
+++ b/activity/templates/activity/detail.html
@@ -87,7 +87,7 @@
    integrity="sha256-pD9Cox8CPqDpiun+M4KOJApykPCR0A17ueVPs+9WEs0="
    crossorigin=""></script>
    <div id="mapid"></div>
-   <div class="django-message" id="django-message">
+   <div class="django-message" id="django-message" style="display: none">
         <p>{% trans 'Die Markierung ' %} "<span id="loc"></span>"{% blocktrans with act=activity comp=chosen_component %} ist nun für alle Mitglieder der Aktivität "{{ act }}" in {{ comp }} sichtbar. Unter "<a style="color: lightblue" href='/account/edit/'>Account bearbeiten</a>" können Sie Ihre Markierungen bearbeiten.{% endblocktrans %}</p>
         <div class="center-container"><a class="blue-button" onclick="document.getElementById('django-message').style.display='none';">{% trans "OK!" %}</a></div>
 </div>
