--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -7,10 +7,10 @@
 <html>
 <head>
     <title>{% block title %}{% endblock %}</title>
-    <style>
+    <!--<style>
         {% include 'account/base.css' %}
-    </style>
-    <!--<link rel="stylesheet" href="{% static 'css/base.css' %}">-->
+    </style>-->
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
     <link rel="shortcut icon" type="image/png" href="{% static 'icons/dog.png' %}">
