--- a/character/templates/character/overview.html
+++ b/character/templates/character/overview.html
@@ -16,7 +16,7 @@
         {% trans 'Zum Fragebogen' %}
     </div>
 {% else %}
-    <div class="center-container">
+    <div class="info-p">
         <b>{% trans 'Die hier angebotenen Persönlichkeitstests wurden in Anlehnung an den NEO-PI-R Test erstellt und basieren auf <a href="https://ipip.ori.org/newNEOKey.htm" target="_blank">frei verfügbaren Fragen</a>, die auf den <a href="https://de.wikipedia.org/wiki/Big_Five_(Psychologie)" target="_blank">Big Five</a> der Persönlichkeitspsychologie fußen.<br><br>Der offizielle NEO-PI-R Persönlichkeitstest umfasst 240 Fragen. Weniger Fragen sind zwar schneller zu beantworten, liefern aber ein unter Wiederholung instabileres Testergebnis.' %}</b>
     </div>
     <p></p>
