--- a/character/templates/character/quiz.html
+++ b/character/templates/character/quiz.html
@@ -7,7 +7,7 @@
 {% block content %}
 <h1 class="h-img"><img src="{% static 'icons/question.png' %}">{% trans 'Fragebogen' %}</h1>
 <div class="button-like" style="margin-bottom: 15px;" onclick=openLink("{% url 'character:overview' %}")>
-    <img src="{% static 'icons/questionnaire.png' %}">
+    <img src="{% static 'icons/brain.png' %}">
     {% trans 'Zur Charakterübersicht' %}
 </div>
 <div class="question">
