--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -31,7 +31,7 @@
         {% endblock %}
     </div>
     <div class="footer" id="footer">
-        <a href="{% url 'account:impressum' %}">{% trans 'Info' %}</a>
+        <a href="{% url 'account:impressum' %}">{% trans 'Impressum' %}</a>
         Icons: <a href='https://icons8.com/'>icons8.com</a>
     </div>
 </div>
