--- a/account/templates/account/impressum.html
+++ b/account/templates/account/impressum.html
@@ -13,7 +13,7 @@
     Yannik Schroeder<br>
     Stresemannstraße 70<br>
     26125 Oldenburg<br>
-    E-Mail: yannik131@web.de<br>
+    E-Mail: myactivities.net@web.de<br>
     Mobil: 0152 55245049{% endblocktrans %}
 </p>
 
@@ -33,7 +33,7 @@
     26125 Oldenburg</p>
     
     <p>Telefon: +49 (0) 152 5524 5049<br />
-    E-Mail: yannik131@web.de</p>
+    E-Mail: myactivities.net@web.de</p>
      <p>Verantwortliche Stelle ist die natürliche oder juristische Person, die allein oder gemeinsam mit anderen über die Zwecke und Mittel der Verarbeitung von personenbezogenen Daten (z. B. Namen, E-Mail-Adressen o. Ä.) entscheidet.</p>
     
     <h3>Speicherdauer</h3> <p>Soweit innerhalb dieser Datenschutzerklärung keine speziellere Speicherdauer genannt wurde, verbleiben Ihre personenbezogenen Daten bei uns, bis der Zweck für die Datenverarbeitung entfällt. Wenn Sie ein berechtigtes Löschersuchen geltend machen oder eine Einwilligung zur Datenverarbeitung widerrufen, werden Ihre Daten gelöscht, sofern wir keine anderen rechtlich zulässigen Gründe für die Speicherung Ihrer personenbezogenen Daten haben (z. B. steuer- oder handelsrechtliche Aufbewahrungsfristen); im letztgenannten Fall erfolgt die Löschung nach Fortfall dieser Gründe.</p>
