--- a/account/static/css/base.css
+++ b/account/static/css/base.css
@@ -390,7 +390,7 @@ form label {
     color: white;
     text-align: center;
     position: absolute;
-    bottom: 0;
+    bottom: 20px;
     left: 30%;
     right: 30%;
     border-radius: 10px;
