--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -34,4 +34,7 @@
         </div>
     </div>
     </div>
+    <a href="https://www.instagram.com/myactivities_net/" class="follow" style="color: white;">
+        <img src="{% static 'icons/instagram.png' %}"> Instagram
+    </a>
 {% endblock %}
