--- a/account/templates/account/impressum.html
+++ b/account/templates/account/impressum.html
@@ -8,15 +8,19 @@
 <h1 class="h-img"><img src="{% static 'icons/info.png' %}">{% trans 'Impressum' %}</h1>
 <p class="info-p">
     {% trans 'Willkommen auf meiner Website! Hier finden Sie Angaben zur Kontaktaufnahme und die Datenschutzerklärung. <br>Zusammengefasst: Ich nutze Ihre Daten (E-Mail, Alter etc.) nur für die auf dieser Seite zur Verfügung gestellten Funktionen. E-Mails werden nur für den Passwort- und Registrierung-Krams verwendet. Eigentlich wollte ich gar keine E-Mails abfragen, aber meine Tester haben andauernd ihre Passwörter vergessen und deswegen zig Accounts erstellen müssen. Standortdaten, Chatverläufe etc. werden nicht an Dritte weitergegeben, auch wenn die verwendeten Tools (z. B. OpenStreetMap) das vielleicht schon von sich aus erledigen. Mehr dazu weiter unten.' %}
-    <br>
-    {% blocktrans %}<h2>Seitenbetreiber:</h2>
-    Yannik Schroeder<br>
-    Stresemannstraße 70<br>
-    26125 Oldenburg<br>
-    E-Mail: myactivities.net@web.de<br>
-    Mobil: 0152 55245049{% endblocktrans %}
 </p>
 
+<div class="center-container">
+    {% blocktrans %}
+        <h2 style="margin-top: 0px">Seitenbetreiber:</h2>
+        Yannik Schroeder<br>
+        Stresemannstraße 70<br>
+        26125 Oldenburg<br>
+        E-Mail: myactivities.net@web.de<br>
+        Mobil: 0152 55245049
+{% endblocktrans %}
+</div>
+<br>
 <div class="info-p">
 {% blocktrans %}
     <h1>Datenschutzerklärung</h1>
