--- a/multiplayer/templates/multiplayer/game.html
+++ b/multiplayer/templates/multiplayer/game.html
@@ -25,6 +25,20 @@
             
         </div>
     </div>
+    <style>
+        .player5-info {
+            position: absolute;
+            bottom: 0px;
+            top: 40px;
+            right: 0;
+            width: 40px;
+        }
+    </style>
+    <div class="player5-info">
+        <div class="text" id="player5">
+            
+        </div>
+    </div>
 </div>
 {% if match.activity.german_name == 'Poker' %}
     {% if match.admin == user %}
