--- a/account/templates/registration/password_reset_form.html
+++ b/account/templates/registration/password_reset_form.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <h1 class="h-img"><img src="{% static 'icons/forgot.png' %}">{% blocktrans %}Passwort vergessen?{% endblocktrans %}</h1>
-    <p class="info-p">{% blocktrans %}Geben Sie ihre E-Mail Adresse ein, um ein neues Passwort zugeschickt zu bekommen.{% endblocktrans %}</p>
+    <p class="info-p">{% blocktrans %}Geben Sie Ihre E-Mail Adresse ein, um Ihr Passwort zurücksetzen.{% endblocktrans %}</p>
     <form class="login-form" method="post">
         {{ form.as_p }}
         {% csrf_token %}
