--- a/wall/templates/wall/post/create_post.html
+++ b/wall/templates/wall/post/create_post.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <h1 class="h-img"><img src="{% static 'icons/post.png' %}">{% trans "Posten in" %} <a href="{{ target.get_absolute_url }}" style="margin-left: 7px">{{ target }}</a></h1>
-    <p class="info-p">{% blocktrans %}Hinweis: Bitte achten Sie bei öffentlichen Posts auf den Verzicht von vulgärer Sprache und laden Sie keine urheberrechtlich geschützten oder anstößigen Mediendateien hoch.{% endblocktrans %}</p>
+    <p class="info-p">{% blocktrans %}Hinweis: Bitte achten Sie bei öffentlichen Posts auf den Verzicht von vulgärer Sprache und laden Sie keine urheberrechtlich geschützten oder anstößigen Mediendateien hoch.<br><span style="color: yellow">Posts können nicht editiert werden, um Likes und Kommentare nicht nachträglich zu invalidieren.</span>{% endblocktrans %}</p>
     <div class="center-container">
         <form class="login-form"class="login-form" method="post" enctype="multipart/form-data">
             {{ form.as_p }}
