--- a/activity/templates/activity/activity_list.html
+++ b/activity/templates/activity/activity_list.html
@@ -40,6 +40,7 @@
     <p></p>
     <script>
         {% include 'javascript/list.js' %}
+        {% url 'activity:list' as url %}
         {% include 'javascript/search.js' %}
     </script>
 {% endblock %}
