--- a/usergroups/templates/usergroups/group_detail.html
+++ b/usergroups/templates/usergroups/group_detail.html
@@ -10,7 +10,7 @@
     {% endif %}
     <h1 class="center-container">{{ group.verbose }}</h1>
     <p class="center-container">{{ group.description }}</p>
-    {% if user == group.admin %}
+    {% if is_admin %}
         <div class="competitive">
             <div class="left" onclick=openLink("{% url 'chat:chat_room' 'usergroups' 'usergroup' group.id %}")>
                 <img src="{% static 'icons/chat.png' %}">
@@ -28,52 +28,63 @@
         </div>
     {% endif %}
     <p>{% trans "Gruppe gehört zur" %} <a href="{{ group.category.get_absolute_url }}">{{ group.category.verbose }}</a></p>
-    {% if group.description %}
-    {% endif %}
-    <h2>{% trans "Mitglieder" %}</h2>
-    {% include 'account/user_loop.html' with users=group.members.all %}
-    <p style="clear: both">{% trans "Administrator" %}: <a href="{{ group.admin.get_absolute_url }}">{{ group.admin }}</a></p>
-    {% if is_member %}
-    <p><div class="center-container"><button class="blue-button" onclick=openLink("{% url 'usergroups:leave_group' group.id %}")>{% trans "Austreten" %}</button></div></p>
-    {% endif %}
-    {% if group.vacancies.all.exists %}
-    <h2>{% trans "Leerstellen" %}</h2>
-        {% with target=group %}
-        {% include 'vacancies/vacancy_list.html' %}
-        {% endwith %}
-    {% else %}
-        <!--{% trans "Zurzeit gibt es keine Leerstellen. Der Administrator kann welche erstellen" %}.-->
-    {% endif %}
-    {% if is_member and group.invitations.all.exists %}
-        <h2>{% trans "Einladungen" %}</h2>
-        {% include 'usergroups/invitation_list.html' with invitations=group.invitations %}
-    {% endif %}
-    {% if user == group.admin %}
-        <div class="competitive">
-            <div class="left" onclick=openLink("{% url 'vacancies:create_vacancies' 'usergroups' 'usergroup' group.id %}")>
+    <div class="info-p">
+        <h2>{% trans "Mitglieder" %}</h2>
+        {% include 'account/user_loop.html' with users=members %}
+        <p style="clear: both">{% trans "Administrator" %}: <a href="{{ group.admin.get_absolute_url }}">{{ group.admin }}</a></p>
+    </div>
+    <br>
+    <div class="info-p">
+        <h2>{% trans "Termine" %}</h2>
+        <div class="button-like" onclick=openLink("{% url 'scheduling:create_appointment' group.id %}")><img src="{% static 'icons/date.png' %}">{% trans "Termin erstellen" %}</div>
+        <br>
+        {% if is_member and group.appointments.all.exists %}
+        {% include 'usergroups/appointment_list.html' %}
+        {% endif %}
+    </div>
+    <br>
+    <div class="info-p">
+        <h2>{% trans "Leerstellen" %}</h2>
+        {% if is_admin %}
+            <div class="button-like" onclick=openLink("{% url 'vacancies:create_vacancies' 'usergroups' 'usergroup' group.id %}")>
                 <img src="{% static 'icons/interview.png' %}">
                 {% trans "Leerstellen hinzufügen" %}
             </div>
-            <div class="right" onclick=openLink("{% url 'vacancies:create_invitation' 'usergroups' 'usergroup' group.id %}")>
+        {% endif %}
+        {% if group.vacancies.all.exists %}
+            {% with target=group %}
+            {% include 'vacancies/vacancy_list.html' %}
+            {% endwith %}
+        {% else %}
+            <!--{% trans "Zurzeit gibt es keine Leerstellen. Der Administrator kann welche erstellen" %}.-->
+        {% endif %}
+        <br>
+    </div>
+    <br>
+    <div class="info-p">
+        <h2>{% trans "Einladungen" %}</h2>
+        {% if is_admin %}
+            <div class="button-like" onclick=openLink("{% url 'vacancies:create_invitation' 'usergroups' 'usergroup' group.id %}")>
                 <img src="{% static 'icons/invitation.png' %}">
                 {% trans "Jemanden einladen" %}
             </div>
-        </div>
-    {% endif %}
-    {% if is_member and group.appointments.all.exists %}
-        <div class="info-p">
-            <h2>{% trans "Termine" %}</h2>
-            {% include 'usergroups/appointment_list.html' %}
-        </div>
-        
-    {% endif %}
-    <br/>
+        {% endif %}
+        {% if is_member and group.invitations.all.exists %}
+            {% include 'usergroups/invitation_list.html' with invitations=group.invitations %}
+        {% endif %}
+        <br>
+    </div>
+    <br>
+    <div class="info-p">
+        <h2>{% trans "Posts" %}</h2>
+        {% if is_member %}
+            <div class="button-like" onclick=openLink("{% url 'wall:create_post' 'usergroups' 'usergroup' group.id %}")><img src="{% static 'icons/post.png' %}">{% blocktrans %}Post erstellen{% endblocktrans %}</div>
+            <br>
+        {% endif %}
+        {% include 'wall/post/post_loop.html' %}
+    </div>
+    
     {% if is_member %}
-        <div class="button-like" onclick=openLink("{% url 'scheduling:create_appointment' group.id %}")><img src="{% static 'icons/date.png' %}">{% trans "Termin erstellen" %}</div>
+    <p><div class="center-container"><button class="blue-button" onclick=openLink("{% url 'usergroups:leave_group' group.id %}")>{% trans "Austreten" %}</button></div></p>
     {% endif %}
-    <h2>{% trans "Posts" %}</h2>
-    {% if is_member %}
-        <div class="button-like" onclick=openLink("{% url 'wall:create_post' 'usergroups' 'usergroup' group.id %}")><img src="{% static 'icons/post.png' %}">{% blocktrans %}Post erstellen{% endblocktrans %}</div>
-    {% endif %}
-    {% include 'wall/post/post_loop.html' %}
 {% endblock %}
