--- a/chat/templates/chat/chat_window.html
+++ b/chat/templates/chat/chat_window.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% load thumbnail %}
 
-<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+<!--<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>-->
 {% with room_id=room.id %}
 <div class="chat-top" id="chat-top-{{ room_id }}">
     {% if not friendship %}
