--- a/character/templates/character/quiz.html
+++ b/character/templates/character/quiz.html
@@ -20,7 +20,7 @@
         <div class="blue-button" style="background-color: darkred; display: none; margin-right: 5px" onclick=back() id="back-button">
             {% trans 'Zurück' %}
         </div>
-        <div class="blue-button" onclick=next() id="send-button">
+        <div class="blue-button" id="send-button">
             {% trans 'Weiter' %}
         </div>
         <div class="counter" id="counter">
