--- a/account/templates/registration/register.html
+++ b/account/templates/registration/register.html
@@ -15,7 +15,7 @@
         
         <p class="info-p">
             <strong>{% trans "Willkommen bei myactivities.net! :)" %}</strong><br><br>
-            {% trans "Bitte nutzen Sie das folgende Formular zum registrieren:" %}
+            {% trans "Bitte nutzen Sie das folgende Formular zum Registrieren:" %}
         </p>
             <form class="login-form" method="post">
                 {{ user_form.as_p }}
