--- a/activity/templates/activity/loop.html
+++ b/activity/templates/activity/loop.html
@@ -10,6 +10,6 @@
         </div>
     </div>
     {% empty %}
-        <b>{% trans "Keine!" %}</b>
+        <div style="text-align: center"><b>{% trans "Keine!" %}</b></div>
     {% endfor %}
 </div>
