--- a/account/templates/account/404.html
+++ b/account/templates/account/404.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<h1>
+<h1 class="h-img">
     <img src="{% static 'icons/attention.png' %}">{% trans "Fehler: 404 - Seite nicht gefunden" %}
 </h1>
 <p class="info-p" style="font-weight: bold; color: yellow">
